# notes

./: .gitignore  404.html  Makefile  index.html  pyproject.toml
aws/: index.html
devops/: index.html
devops/jenkins/: index.html
low-level/: index.html
notes/: mkdocs.yml
notes/docs/: index.md
notes/docs/devops/: jenkins.md
search/: search_index.json
