[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-terminal>=4.6.0",
    "mkdocs-git-revision-date-plugin>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
